@@ -20,10 +20,10 @@ class StateModLoading(State.State):
         State.State.__init__(self)
 
     def get_parts(self) -> list:
-        return [UIPartProgressBar.UIPartProgressBar((10, 10), (20, 20), status=1, color=(1., 0., 0.)),  # stage
-                UIPartProgressBar.UIPartProgressBar((10, 40), (20, 20), status=1, color=(0., 0., 1.)),  # mod
-                UIPartProgressBar.UIPartProgressBar((10, 70), (20, 20), status=1, color=(0., 1., 0.)),  # item
-                UIPartProgressBar.UIPartProgressBar((10, 10), (20, 20), status=1,  # memory usage
+        return [UIPartProgressBar.UIPartProgressBar((20, 10), (20, 20), status=1, color=(1., 0., 0.)),  # stage
+                UIPartProgressBar.UIPartProgressBar((20, 40), (20, 20), status=1, color=(0., 0., 1.)),  # mod
+                UIPartProgressBar.UIPartProgressBar((20, 70), (20, 20), status=1, color=(0., 1., 0.)),  # item
+                UIPartProgressBar.UIPartProgressBar((20, 10), (20, 20), status=1,  # memory usage
                                                     color=(1., 0., 0.), progress_items=psutil.virtual_memory().total)]
 
     def bind_to_eventbus(self):
@@ -32,20 +32,17 @@ class StateModLoading(State.State):
         self.eventbus.subscribe("gameloop:tick:end", self.on_update)
 
     def on_resize(self, w, h):
-        for part in self.parts:
-            part.bboxsize = (w, h)
+        for part in self.parts: part.bboxsize = (G.window.get_size()[0] - 40, 20)
+        self.parts[3].position = (20, G.window.get_size()[1] - 40)
 
     def on_draw_2d_pre(self):
         pyglet.gl.glClearColor(255, 255, 255, 255)
-        for part in self.parts:
-            part.bboxsize = (G.window.get_size()[0]-40, 20)
-        self.parts[3].position = (10, G.window.get_size()[1]-40)
         process = psutil.Process()
         with process.oneshot():
             self.parts[3].progress = process.memory_info().rss
         self.parts[3].text = "Memory usage: {}MB/{}MB ({}%)".format(
-            self.parts[3].progress//2 ** 20, self.parts[3].progress_max//2 ** 20,
-            round(self.parts[3].progress/self.parts[3].progress_max*10000)/100)
+            self.parts[3].progress // 2 ** 20, self.parts[3].progress_max // 2 ** 20,
+            round(self.parts[3].progress / self.parts[3].progress_max * 10000) / 100)
 
     def on_update(self, dt):
         G.modloader.process()
