@@ -47,6 +47,9 @@ information on development:
 
 changelog of snapshot [next]
     fixed issues:
+        long-term issues:
+            - crafting output slot was added to inventory
+
         since last snapshot:
             - generator for recipe generator was not parsing output correctly leading into errors in the recipes
 
